--- a/setup.cfg
+++ b/setup.cfg
@@ -33,9 +33,11 @@ packages = find:
 install_requires =
     numpy
     magicgui
+    napari[all]
     qtpy
+    quoll
 
-python_requires = >=3.8
+python_requires = >=3.7
 include_package_data = True
 package_dir =
     =src
