--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ testing =
     pytest  # https://docs.pytest.org/en/latest/contents.html
     pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
     pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
+    pytest-xvfb
     napari
     pyqt5
 
