--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ install_requires =
     magicgui
     qtpy
     quoll
+    scipy<=1.12.0
 python_requires = >=3.8
 include_package_data = True
 package_dir =
